working on new structure

--- a/contents/accessible.tex
+++ b/contents/accessible.tex
@@ -1,5 +1,5 @@
 \newpage
-\section{Accessible.}
+\section{Accessible}
 \subsection*{}
  
 Los datos se consideran accesibles por el usuario cuando este no necesita realizar un esfuerzo desmesurado para
@@ -9,9 +9,12 @@ que pueda entender.\\
 
 En este apartado veremos si es posible el acceso a los datos por un usuario medio y como optimizar la accesibilidad.
 
-\input{contents/accessible/availableVsAccessible.tex}
-\input{contents/accessible/dataInterpretation.tex}
+\input{contents/accessible/available.tex}
+\input{contents/accessible/knowAbout.tex}
+\input{contents/accessible/interpretability.tex}
+\input{contents/accessible/model.tex}
 \input{contents/accessible/format.tex}
+\input{contents/accessible/convenience.tex}
 \input{contents/accessible/accessibilityOptimization.tex}
 
 \begin{figure}[ht]
@@ -26,41 +29,4 @@ En este apartado veremos si es posible el acceso a los datos por un usuario medi
   }
   \end{figure}
 
-
-
-\begin{comment}
-    
-
-    ----Respecto a polucion del aire 
-    Acudir a fuentes privadas
-    Instalacion de dispositivos
-  Done-  Ejemplos de bases de datos de distintas ciudades capitales
-
-
-    --no plataformas de pago
-Done -no instalacion de software
--no complicaciones por parte del usuario.
-
---Datos automatizados -- formato maquina
---almacenamiento
---conocimientos informaticos
---analiticos
---estudio de la materia, ver que es importante o no, contrastarlo
---equipo multidisciplinario
---informaticos no son expertos en medicina, por ejemplo.
-\begin{itemize}
-
-    \item datos disponible
-    \item no substraible por el usuario medio
-    \item imposible de tratar sin una estructura
-    \item no es posible de tener un historico
-    \item sin informacion complementaria que muestre informacion util
-    \item Desperdicio
-    \item \end{itemize}
-
----Si fuera necesario, se le puede proporcionar las herramientas para que pueda entenderlo, en los 
-casos mas complicados donde se necesitan conocimientos previos sobre la materia.
-
----Incluir concepto de muestras
-\end{comment}  
     
