--- a/contents/accessible/accessibilityOptimization.tex
+++ b/contents/accessible/accessibilityOptimization.tex
@@ -4,6 +4,8 @@ Para ofrecer los datos a los usuarios de una manera directa, es recomendable uti
 este familiarizado. Por ejemplo, es mas factible que el usuario se sienta mas atraido a acceder a los datos si no requiere
 ninguna instalacion en sus dispositivos.\\
 
+-- Instalacion de dispositivos para extraer la informacion ellos mismos
+
 
 \subsubsection{How to solve it} 
 Ofrecer la informacion mediante una pagina web o una aplicacion movil. Ofrecer toda la informacion posible sin necesidad de
@@ -19,7 +21,7 @@ solo muestran paginas que utilizar un metodo seguro.
 Como comentabamos anteriormente, todos los usuarios pueden ver la informacion basica sin necesidad de aportar ningun dato o identificarse, sin la necesidad de 
 realizar ninguna descarga o instalacion y hoy en dia, casi todo el mundo esta familiarizado con la navegacion web.
 
-\paragraph{Evaluation} \mbox{} 
+\elsparagraph{Evaluation}  
 
 Ofrecerles a los usuarios una pagina web libre de cargos, facilita que el usuario acceda directamente a la informacion
 sin tener que realizar ninguna descarga. Al eliminar esta barrera, el usuario nos da un punto de confianza.
