--- a/contents/evaluation.tex
+++ b/contents/evaluation.tex
@@ -4,4 +4,7 @@
    \item  { Methodology, Results } / 
    \item   -Enquete, real test results...
    \item   -Analysis of the results   
+   \item   Podemos entender  que significa cada uno de los campos representados en el conjunto de dato gracias a la informacion
+   complementaria presentada en el portal de datos abiertos y por la informacion proporcionada por la empresa encargada de 
+   recolectar los datos.
 \end{itemize}
