--- a/chapter.tex
+++ b/chapter.tex
@@ -10,10 +10,14 @@
 \usepackage{amssymb}
 \newcommand{\done}{\item[\checkmark]}
 \newcommand{\crossed}{\item[$\times$]}
+
+    
+
+
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{3}
 \hbadness=99999
-
+ 
 \graphicspath{ {images/} }
 
 \journal{Intelligent Environmental Data Analysis and Pollution Management}
@@ -31,11 +35,13 @@
 \begin{keyword}
  Air Quality Index \sep Pollution \sep Monitoring \sep Visualization \sep Analysis \sep BigData
 \end{keyword}
+
 \begin{abstract}
 \input{contents/abstract} 
 \end{abstract}
 \end{frontmatter}
 \newpage
+\tableofcontents
 \listoffigures
 \newpage
 \input{contents/introduction} 
