working on relevant structure

--- a/contents/relevant.tex
+++ b/contents/relevant.tex
@@ -1,5 +1,24 @@
 \newpage
 \section{Relevant}
-\input{contents/relevant/theory.tex}
-\input{contents/relevant/practical.tex}
-\input{contents/relevant/evaluation.tex}
+ 
+Una buena representacion de los datos no consiste en presentarlos todos para que el usuario tenga la mayor informacion posible,
+consiste en mostrarle los datos necesarios para que pueda hacer una lectura directa de la situacion.\\
+
+En este apartado veremos el refinado de los datos para ofrecer al usuario una informacion relevante y de calidad.
+
+\input{contents/relevant/model.tex}
+\input{contents/relevant/dataSetQuality.tex}
+\input{contents/relevant/userOriented.tex}
+\input{contents/relevant/useful.tex}
+\input{contents/relevant/personalized.tex}
+\begin{figure}[ht]
+    \centering
+    \framebox{
+    \vbox{\begin{tabbing} 
+    Check List \\
+    \hspace*{10mm} \ding{47} Point 1 \hspace*{25mm} \= \ding{47} Point B \\
+     
+    \end{tabbing}}%
+    
+    }
+    \end{figure}
