--- a/contents/accessible/convenience.tex
+++ b/contents/accessible/convenience.tex
@@ -1,9 +1,13 @@
 \subsection{Convenience}
-  \textbf{Infraestructura}. Por ejemplo, el almacenamiento. Los datos publicados son los mas recientes, por lo que no hay manera de obtener 
+\textcolor{red}{\textbf{Por Aqui voy}}
+\textbf{Infraestructura}. Por ejemplo, el almacenamiento. Los datos publicados son los mas recientes, por lo que no hay manera de obtener 
 un historico de los datos si no son almacenados periodicamente. Una vez extraidos los datos, el usuario debera 
 contar con una infraestructura que le permita almacenar los datos.
- \textbf{Automatizacion}. Este proceso tiende a ser arduo, por lo que sera necesario automatizarlo, de otra 
+\textbf{Automatizacion}. Este proceso tiende a ser arduo, por lo que sera necesario automatizarlo, de otra 
 forma el esfuerzo requerido por el usuario para extraer la informacion no le compensara. 
+\textbf{Disponibilidad} Para ofrecer los datos a los usuarios de una manera directa, es recomendable utilizr una plataforma a la que el usuario
+este familiarizado. Por ejemplo, es mas factible que el usuario se sienta mas atraido a acceder a los datos si no requiere
+ninguna instalacion en sus dispositivos.
 
 Seguramente, realizaremos tareas repetitivas, como por ejemplo la representacion de los datos que son actualizados periodicamente.
 Automatizacion para que se vea siempre lo que queremos
@@ -26,6 +30,9 @@ periodicamente.
 
 
 \subsubsection{How to solve it} 
+Ofrecer la informacion mediante una pagina web o una aplicacion movil. Ofrecer toda la informacion posible sin necesidad de
+hacer que el usuario realize acciones complicadas, como la identificacion.
+Ofrecer una plataforma segura.
 \subsubsection{How we solve it. Aire Guru} 
 Se actualiza cada hora, por lo que si queremos acceder a unos datos en concreto, deberemos repetir la operacion periodicamente.
 Un valor importante de este conjunto de datos es saber la evolucion de la polucion por zonas, la extraccion de esta informacion no es posible
@@ -34,6 +41,7 @@ si no se realiza un almacenado de los datos.
 Aire Guru automatiza el proceso de recoleccion de los datos mediante un trabajo CRON que ejecuta un script implementado en JavaScript periodicamente. Este lee 
 los datos de la url, los procesa, limpia y almacena en una base de datos MongoDB.
 
+Disponibilidad --En este caso no se necesitan aparatos que midan los datos
 \begin{figure}[ht]
     \centering
     \includegraphics[width=12cm]{aireGuruArquitecture}
@@ -47,6 +55,12 @@ Mediante una interfaz web, muestra los datos al usuarios.
     \includegraphics[width=9cm]{aireGuru}
     \caption{Aire Guru. Web Interface}
 \end{figure}
+Para garantizar el alcance a la mayoria de la poblacion, Aire Guru esta disponible en las direcciones webs https://www.aire.guru y https://www.airquality.guru.
+Usa SSL que garantiza la encriptacion de los datos atraves de la red, ademas, cada vez mas navegadores intentan proteger a los usuarios y
+solo muestran paginas que utilizar un metodo seguro. 
+
+Como comentabamos anteriormente, todos los usuarios pueden ver la informacion basica sin necesidad de aportar ningun dato o identificarse, sin la necesidad de 
+realizar ninguna descarga o instalacion y hoy en dia, casi todo el mundo esta familiarizado con la navegacion web.
 
 \elsparagraph{Evaluation}  
 \begin{itemize}
@@ -56,3 +70,8 @@ Mediante una interfaz web, muestra los datos al usuarios.
 seria saber a que nivel de polucion estamos rodeados en las coordenadas en la que nos encontramos. Con la informacion en crudo obtenida desde el portal, 
 nos es una tarea imposible, pero si ardua si no contamos con un sistema que procese los datos. Aire Guru resulve este problema.
 \end{itemize}
+
+Ofrecerles a los usuarios una pagina web libre de cargos, facilita que el usuario acceda directamente a la informacion
+sin tener que realizar ninguna descarga. Al eliminar esta barrera, el usuario nos da un punto de confianza.
+--reacio a identificarse
+--y actualmente se esta trabajando en su traduccion al ingles, para cubrir un rango mas amplio de su poblacion, ya que esta ciudad es cada vez mas cosmopolita.
