--- a/contents/compelling.tex
+++ b/contents/compelling.tex
@@ -1,5 +1,15 @@
 \newpage
 \section{Compelling}
 \input{contents/compelling/theory.tex}
-\input{contents/compelling/practical.tex}
-\input{contents/compelling/evaluation.tex}
+
+\begin{figure}[ht]
+    \centering
+    \framebox{
+    \vbox{\begin{tabbing} 
+    Check List \\
+    \hspace*{10mm} \ding{47} Point 1 \hspace*{25mm} \= \ding{47} Point B \\
+     
+    \end{tabbing}}%
+    
+    }
+    \end{figure}
