working on convenience

--- a/contents/compelling/theory.tex
+++ b/contents/compelling/theory.tex
@@ -58,5 +58,5 @@ Al represnentar la informacion sera incluido lo basicamente necesario, huyendo s
   Asegurar seguridad, integridad y confidencialidad
   Transparencia, opcion a eliminar los datos
   Explicar finalidad de los datos\\
-
+  Disponibilidad --En este caso no se necesitan aparatos que midan los datos
   
