--- a/contents/accessible/convenience.tex
+++ b/contents/accessible/convenience.tex
@@ -1,77 +1,63 @@
 \subsection{Convenience}
-\textcolor{red}{\textbf{Por Aqui voy}}
-\textbf{Infraestructura}. Por ejemplo, el almacenamiento. Los datos publicados son los mas recientes, por lo que no hay manera de obtener 
-un historico de los datos si no son almacenados periodicamente. Una vez extraidos los datos, el usuario debera 
-contar con una infraestructura que le permita almacenar los datos.
-\textbf{Automatizacion}. Este proceso tiende a ser arduo, por lo que sera necesario automatizarlo, de otra 
-forma el esfuerzo requerido por el usuario para extraer la informacion no le compensara. 
-\textbf{Disponibilidad} Para ofrecer los datos a los usuarios de una manera directa, es recomendable utilizr una plataforma a la que el usuario
+Como mencionamos anteriormente, nuestro objetivo es que el usuario tenga un acceso a los datos directos sin tener que lidiar con ninguno
+de los procesos tecnicos que conlleva el implementar un sistema. Los puntos que deberemos cubrir para alcanzar este objetivo son:\\
+\textbf{Infraestructura}. Recoleccion de datos, procesado, almacenamiento y visualizacion. Por ejemplo, en la mayoria de los casos, los datos son 
+publicados periodicamente, pero el conjunto de datos publicados solo contien las muestras mas recientes, por lo que no hay manera de obtener 
+un historico de los datos si no son recolectados, procesados y almacenados periodicamente. \\
+\textbf{Automatizacion}. Como comentabamos en el punto anterior, esta tareas son repetitivas y ademas tienden a ser procesos arduos, por lo que sera
+necesario automatizarlo, de otra forma el esfuerzo requerido por el usuario para extraer la informacion no le compensara. \\
+\textbf{Disponibilidad} Para ofrecer los datos a los usuarios de una manera directa, es recomendable utilizar una plataforma a la que el usuario
 este familiarizado. Por ejemplo, es mas factible que el usuario se sienta mas atraido a acceder a los datos si no requiere
-ninguna instalacion en sus dispositivos.
-
-Seguramente, realizaremos tareas repetitivas, como por ejemplo la representacion de los datos que son actualizados periodicamente.
-Automatizacion para que se vea siempre lo que queremos
-Estos procesos pueden llegar
-a ser muy tediosos si no se automatizan.
-Despues de seleccionar los campos necesarios deacurdo a nuestro diseno, se han realizado diferentes tareas de limpieza y transformacion,
-como la eliminacion de datos no relevantes, por ejemplo el identificador de la estacion de medida, ya que el conjunto de datos
-contiene las coordenadas de la estacion y para nosotros es mucho mas interesante.
-Transformacion de campos a un formato adecuado, por ejemplo la fecha y hora en el que la medida ha sido tomada se almacena en formato fecha
-en vez de cadena como se proporciona en el conjunto de datos en crudo.
-Este conjunto de datos ofrece una o varias medidas por cada contaminante, que puede representarse por tres campos distintos, una medida 
-cuantitativa, una cualitativa de la estacion fija de medida y una cualitativa de una estacion movil. Anadiremos un campo con la medida
-mas relevante y eliminaremos las demas para minimizar el tiempo de procesado.
-
-Por seguridad, se ha implementado una segunda arquitectura totalmente independiente que recolecta los datos y almacena en crudo.
-
-Ademas proporcionaremos
-la infraestructura necesaria para que el usuario solo tenga que consultar los datos y automatizaremos los procesos que deban repetirse
-periodicamente.
-
+ninguna instalacion en sus dispositivos.\\
 
 \subsubsection{How to solve it} 
-Ofrecer la informacion mediante una pagina web o una aplicacion movil. Ofrecer toda la informacion posible sin necesidad de
-hacer que el usuario realize acciones complicadas, como la identificacion.
-Ofrecer una plataforma segura.
+Tendremos que proporcionar toda la infraestructura mencionada para poder realizar todos los pasos para completar el camino de la obtencion de los
+datos en crudo hasta ofrecerselos al usuario de una manera accesible, relevante e irresistible.
+Intentaremos liberar al usuario de acciones repetitivas, automatizaremos todos los procesos posibles, para ofrecer al usuario la informacion lo mas
+directamente posible.
+Deberemos ofrecer la informacion mediante una plataforma con que el usuario este familiarizado, hoy en dia el uso de pagina webs o aplicaciones moviles es muy comun.
+Es recomendable ofrecer toda la informacion posible sin necesidad de hacer que el usuario realize acciones complicadas y no requiera de ningun software o hardware adicional.
+Deberemos velar por la seguridad, por lo que la plataforma debe ser segura.
+
 \subsubsection{How we solve it. Aire Guru} 
-Se actualiza cada hora, por lo que si queremos acceder a unos datos en concreto, deberemos repetir la operacion periodicamente.
-Un valor importante de este conjunto de datos es saber la evolucion de la polucion por zonas, la extraccion de esta informacion no es posible
-si no se realiza un almacenado de los datos.
+El conjunto de datos de la calidad del aire de Malaga se actualiza cada hora, Aire Guru automatiza el proceso de recoleccion de los 
+datos mediante un trabajo CRON que ejecuta un script implementado en JavaScript periodicamente. Este lee los datos de la url, los procesa,
+limpia y almacena en una base de datos MongoDB. Es decir, implementa toda la estructura necesaria.
 
-Aire Guru automatiza el proceso de recoleccion de los datos mediante un trabajo CRON que ejecuta un script implementado en JavaScript periodicamente. Este lee 
-los datos de la url, los procesa, limpia y almacena en una base de datos MongoDB.
+Gracias a esta infraestructura el usuario es capaz de visualizar la evolucion de los contaminantes desde el 2018. Ademas puede ver la exposicion
+personal a estos contaminante durante el mismo periodo de tiempo.
 
-Disponibilidad --En este caso no se necesitan aparatos que midan los datos
+Ademas, con la automatizacion de procesos, el usuario es capaz de visualizar la polucion a tiempo de real de la ciudad de Malaga y concretamente en el punto
+en el que se encuentra.\\
+
 \begin{figure}[ht]
     \centering
     \includegraphics[width=12cm]{aireGuruArquitecture}
     \caption{Arquitecture Aire Guru}
 \end{figure}
 
-Mediante una interfaz web, muestra los datos al usuarios.
+Mediante una interfaz web, muestra los datos al usuarios.\\
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=9cm]{aireGuru}
     \caption{Aire Guru. Web Interface}
 \end{figure}
+
 Para garantizar el alcance a la mayoria de la poblacion, Aire Guru esta disponible en las direcciones webs https://www.aire.guru y https://www.airquality.guru.
 Usa SSL que garantiza la encriptacion de los datos atraves de la red, ademas, cada vez mas navegadores intentan proteger a los usuarios y
 solo muestran paginas que utilizar un metodo seguro. 
 
 Como comentabamos anteriormente, todos los usuarios pueden ver la informacion basica sin necesidad de aportar ningun dato o identificarse, sin la necesidad de 
-realizar ninguna descarga o instalacion y hoy en dia, casi todo el mundo esta familiarizado con la navegacion web.
+realizar ninguna descarga o instalacion y hoy en dia, casi todo el mundo esta familiarizado con la navegacion web. 
+Cuando no forzamos al usuario a realizar acciones extras, como una descarga o identificacion, el usuario se sentira menos forzado a darnos una oportunidad.
 
 \elsparagraph{Evaluation}  
 \begin{itemize}
-  \done Los datos necesarios para nuestro modelo han sido extraidos de los datos en crudo
-\done Infraestructura. Implementa toda la arquitectura necesaria tanto de almacenaje, procesado como visualizacion.
-\done Automatiza los procesos de recoleccion de datos y los calculos necesarios para mostrar la informacion al usuario. Por ejemplo, una pregunta simple 
-seria saber a que nivel de polucion estamos rodeados en las coordenadas en la que nos encontramos. Con la informacion en crudo obtenida desde el portal, 
-nos es una tarea imposible, pero si ardua si no contamos con un sistema que procese los datos. Aire Guru resulve este problema.
+\done Los datos necesarios para nuestro modelo han sido extraidos de los datos en crudo. 
+\done Infraestructura. Implementa toda la arquitectura necesaria tanto de almacenaje, procesado como visualizacion para que el usuario solo tenga que consultar 
+los datos.
+\done Automatiza los procesos de recoleccion de datos y los calculos necesarios para mostrar la informacion al usuario. 
+\done Ofrecerles a los usuarios una pagina web libre de cargos, facilita que el usuario acceda directamente a la informacion
 \end{itemize}
 
-Ofrecerles a los usuarios una pagina web libre de cargos, facilita que el usuario acceda directamente a la informacion
-sin tener que realizar ninguna descarga. Al eliminar esta barrera, el usuario nos da un punto de confianza.
---reacio a identificarse
---y actualmente se esta trabajando en su traduccion al ingles, para cubrir un rango mas amplio de su poblacion, ya que esta ciudad es cada vez mas cosmopolita.
