check list is a new section

--- a/contents/compelling.tex
+++ b/contents/compelling.tex
@@ -1,15 +1,4 @@
 \newpage
 \section{Compelling}
 \input{contents/compelling/theory.tex}
-
-\begin{figure}[ht]
-    \centering
-    \framebox{
-    \vbox{\begin{tabbing} 
-    Check List \\
-    \hspace*{10mm} \ding{47} Point 1 \hspace*{25mm} \= \ding{47} Point B \\
-     
-    \end{tabbing}}%
-    
-    }
-    \end{figure}
+\input{contents/compelling/checkList.tex}
