--- a/contents/relevant.tex
+++ b/contents/relevant.tex
@@ -11,14 +11,4 @@ En este apartado veremos el refinado de los datos para ofrecer al usuario una in
 \input{contents/relevant/userOriented.tex}
 \input{contents/relevant/useful.tex}
 \input{contents/relevant/personalized.tex}
-\begin{figure}[ht]
-    \centering
-    \framebox{
-    \vbox{\begin{tabbing} 
-    Check List \\
-    \hspace*{10mm} \ding{47} Point 1 \hspace*{25mm} \= \ding{47} Point B \\
-     
-    \end{tabbing}}%
-    
-    }
-    \end{figure}
+\input{contents/relevant/checkList.tex}
