--- a/contents/accessible.tex
+++ b/contents/accessible.tex
@@ -14,17 +14,8 @@ En este apartado veremos si es posible el acceso a los datos por un usuario medi
 \input{contents/accessible/model.tex}
 \input{contents/accessible/format.tex}
 \input{contents/accessible/convenience.tex}
+\input{contents/accessible/checkList.tex}
 
-\begin{figure}[ht]
-  \centering
-  \framebox{
-  \vbox{\begin{tabbing} 
-  Check List \\
-  \hspace*{10mm} \ding{47} Point 1 \hspace*{25mm} \= \ding{47} Point B \\
-   
-  \end{tabbing}}%
-  
-  }
-  \end{figure}
+
 
     
