--- a/contents/relevant/userOriented.tex
+++ b/contents/relevant/userOriented.tex
@@ -4,7 +4,7 @@
 Estudio de las necesidades de los usuarios, psicologico, social y economico.
 Actual
 Retroalimentacion, analisis del comportamiento del usuario para ve sus pautas
-
+--diseno simple y minimalista
 \subsubsection{How to solve it} 
 
 
